[metadata]
name = PJ
version = attr: PJ.meta.VERSION
description = DESC
url = https://github.com/USER/PJ
author = USER
author_email = EMAIL0@users.noreply.github.com
long_description = file: README.md
license = Apache-2.0
license_files = LICENSE

classifiers =
  CHECK https://pypi.org/classifiers/

keywords =
  KEYWORDS

[options]
python_requires = >=3.8
packages = find:
package_dir =
  = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  wrap = PJ.cli.CMD:main

