[metadata]
name = piest
version = attr: piest.meta.VERSION
description = Superlative form of Py
url = https://github.com/ru5j4r0/piest
author = ru5j40
author_email = 59990307+ru5j4r0@users.noreply.github.com
long_description = file: README.md
license = Apache-2.0
license_files = LICENSE

classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: Plugins
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Utilities

keywords =
  utilities
  utils
  util
  module
  library
  helpers
  helper

[options]
python_requires = >=3.8
packages = find:
package_dir =
  = src

[options.packages.find]
where = src

